Fix problems with the dark mode button

--- a/EXPLORER/Projeto 05-EXPLORER/Desafio-TimerDarkMode/style.css
+++ b/EXPLORER/Projeto 05-EXPLORER/Desafio-TimerDarkMode/style.css
@@ -42,6 +42,22 @@ main {
     align-items: center;
 }
 
+/*-------------------- Darkmode --------------------*/
+.screenMode-light,
+.screenMode-dark {
+    background-color: transparent;
+    border: none;
+
+    cursor: pointer;
+
+    position: absolute;
+    top: 8.33%;
+    right: 4.69%;
+}
+
+/*-------------------- Darkmode --------------------*/
+
+
 #timer {
     width: 32.1rem;
     height: 21.3rem;
@@ -79,7 +95,7 @@ main {
     display: none;
 }
 
-.paude {
+.pause {
     color: black;
     background-color: black;
 }
@@ -125,6 +141,7 @@ main {
     height: 15.2rem;
     border-radius: 24px;
     background-color: var(--cd-color);
+    opacity: 0.8;
 
     display: flex;
     justify-content: center;
@@ -134,25 +151,25 @@ main {
 }
 
 .card-forest:hover {
-    opacity: 0.8;
+    background-color: var(--cd-hover-color);
     transform: scale(1.05);
     transition: transform .6s ease;
 }
 
 .card-rain:hover {
-    opacity: 0.8;
+    background-color: var(--cd-hover-color);
     transform: scale(1.05);
     transition: transform .6s ease;
 }
 
 .card-coffe:hover {
-    opacity: 0.8;
+    background-color: var(--cd-hover-color);
     transform: scale(1.05);
     transition: transform .6s ease;
 }
 
 .card-firepit:hover {
-    opacity: 0.8;
+    background-color: var(--cd-hover-color);
     transform: scale(1.05);
     transition: transform .6s ease;
 }
